修复疾病分割 BUG